2003-10-19  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* c/CLexer.hs (linedir): allow an arbitrary number of ints after
	the filename in a #line directive; problem was first reported by Sean
	Seefried <sseefried@cse.unsw.edu.au>

	* gen/GBMonad.hs (delayCode): Generate appropriate line numbers
	for delayed code; problem reported by Sean Seefried
	<sseefried@cse.unsw.edu.au>

	* chs/CHS.hs (showCHSModule): Never generate negative line numbers

	* toplevel/Version.hs (versnum): 0.12.0 "Springtime"

2003-06-10  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* toplevel/Version.hs (versnum): 0.11.5

2003-05-30  Jens Petersen  <petersen@redhat.com>

	* configure.in: Search for compiler named HC too.

2003-05-30  Jens Petersen  <petersen@redhat.com>

	* c2hs.spec.in (Version): Set directly.
	(Release): Ditto.
	(%prep): Quieten setup.
	(%build): Use configure macro.
	(%install): Use makeinstall macro.
	(%post): Use _bindir.
	(%files): Make root own files.  Use _bindir, _libdir and _mandir.

2003-05-22  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* gen/GenBind.hs (Ord): Need instance for `<=' for indirectly
	defined `compare'; bug reported by Ian Lynagh <igloo@earth.li>

	* toplevel/Version.hs (versnum): 0.11.4

2003-04-16  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* gen/GenHeader.hs (ghFrag): sentries for conditionals must not be
	turned into internal identifiers, as this spoils later equality
	tests with identifiers read from the pre-processed header file;
	bug reported by Axel Simon <A.Simon@ukc.ac.uk>

	* toplevel/Version.hs (versnum): 0.11.3

2003-03-04  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* gen/GenBind.hs (evalConstCExpr): supporting enumerators in
	constant expressions

	* toplevel/Version.hs (versnum): 0.11.2

2003-02-13  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* chs/CHS.hs: removed the "header" tag (we now support the CPP
	#include directive)

	* Configuration-related patch by Ian Lynagh <igloo@earth.li> that