@@ -5,6 +5,7 @@ with contributions from (alphabetical order)
 Ian Lynagh		 <igloo@earth.li>
 Jens-Ulrik Petersen	 <petersen@haskell.org>
 Armin Sander		 <armin@mindwalker.org>
+Sean Seefried		 <sseefried@cse.unsw.edu.au>
 Axel Simon               <A.Simon@ukc.ac.uk>
 Michael Weber		 <michaelw@debian.org>
 
@@ -14,5 +15,4 @@ Jan Kort		 <kort@science.uva.nl>
 Seth Kurtzberg		 <seth@cql.com>
 Simon Marlow		 <simonmar@microsoft.com>
 Sven Panne		 <Sven.Panne@informatik.uni-muenchen.de>
-Sean Seefried		 <sseefried@cse.unsw.edu.au>
 Volker Wysk		 <post@volker-wysk.de>
